--- a/src/pages/Experience.css
+++ b/src/pages/Experience.css
@@ -1,3 +1,12 @@
+.ex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  text-align: center;
+  margin-top: 20px;
+}
+
+
 .center-1 {
     display: grid;
     place-items: center;
@@ -81,7 +90,7 @@
     height: 14vh;
     background-color: black;
     position: absolute;
-    top: 215px;
+    top: 210px;
     left: 535px;
   }
 
@@ -91,20 +100,20 @@
     height: 14vh;
     background-color: black;
     position: absolute;
-    top: 388px;
+    top: 382px;
     left: 535px;
   }
 
   .date1{
     position: relative;
-    top: -320px;
+    top: -315px;
     left: 417px;
     font-weight: lighter;
   }
 
   .date2{
     position: relative;
-    top: -510px;
+    top: -505px;
     left: 400px;
     font-weight: lighter;
 
@@ -112,7 +121,7 @@
 
   .date3{
     position: relative;
-    top: -700px;
+    top: -695px;
     left: 400px;
     font-weight: lighter;
 
