--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -5,6 +5,13 @@
     margin-top: 35px;
 }
 
+.port-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: center;
+    margin-top: 20px;
+  }
 .image-item {
     text-align: center;  /* Centers the image, h4, and link */
 }
